# auto-training

./: .gitignore  README.md  agents.md  pyproject.toml
src/auto_training/: __init__.py  __main__.py
src/auto_training/cli/: main.py
src/auto_training/models/: __init__.py
src/auto_training/train/: __init__.py
tests/: test_cli.py  test_env.py
